--- a/MDK-ARM/main/main.build_log.htm
+++ b/MDK-ARM/main/main.build_log.htm
@@ -26,7 +26,39 @@ Project File Date:  07/29/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'main'
+Rebuild target 'main'
+assembling startup_stm32f411xe.s...
+compiling stm32f4xx_it.c...
+compiling stm32f4xx_hal_msp.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling main.c...
+../Lib/ili9341/ili9341.h(67): warning:  #1295-D: Deprecated declaration ILI9341_Unselect - give arg types
+  void ILI9341_Unselect();
+../Lib/ili9341/ili9341_touch.h(31): warning:  #1295-D: Deprecated declaration ILI9341_TouchUnselect - give arg types
+  void ILI9341_TouchUnselect();
+../Lib/ili9341/ili9341_touch.h(33): warning:  #1295-D: Deprecated declaration ILI9341_TouchPressed - give arg types
+  bool ILI9341_TouchPressed();
+../Src/main.c(75): warning:  #223-D: function "vsnprintf" declared implicitly
+      vsnprintf(buff, sizeof(buff), fmt, args);
+../Src/main.c: 4 warnings, 0 errors
+compiling stm32f4xx_hal_spi.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_tim.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling system_stm32f4xx.c...
+compiling fonts.c...
+compiling stm32f4xx_hal_uart.c...
 compiling ili9341_touch.c...
 ..\Lib\ili9341\ili9341.h(67): warning:  #1295-D: Deprecated declaration ILI9341_Unselect - give arg types
   void ILI9341_Unselect();
@@ -44,10 +76,14 @@ compiling ili9341_touch.c...
   		char a[]=sprintf("raw_x = %d, raw_y = %d\r\n", x, y);
 Internal fault: [0x91d2ec:5060960] in ILI9341_TouchGetCoordinates
 Please contact your supplier.
+compiling ili9341.c...
+..\Lib\ili9341\ili9341.h(67): warning:  #1295-D: Deprecated declaration ILI9341_Unselect - give arg types
+  void ILI9341_Unselect();
+..\Lib\ili9341\ili9341.c: 1 warning, 0 errors
 linking...
-Program Size: Code=14306 RO-data=1022 RW-data=16 ZI-data=1792  
+Program Size: Code=14458 RO-data=1022 RW-data=16 ZI-data=1792  
 FromELF: creating hex file...
-"main\main.axf" - 0 Error(s), 7 Warning(s).
+"main\main.axf" - 0 Error(s), 12 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -71,7 +107,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
