--- a/MDK-ARM/main/main.build_log.htm
+++ b/MDK-ARM/main/main.build_log.htm
@@ -9,12 +9,12 @@ License Information: qqq admin, qqq, LIC=CRMW3-A32BG-HR8XN-YLIQC-L22WC-N1LJU
  
 Tool Versions:
 Toolchain:       MDK-ARM Professional  Version: 5.35.0.2
-Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
-C Compiler:      Armcc.exe V5.06 update 7 (build 960)
-Assembler:       Armasm.exe V5.06 update 7 (build 960)
-Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
-Library Manager: ArmAr.exe V5.06 update 7 (build 960)
-Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
+Toolchain Path:  C:\Keil_v5\ARM\ARMCLANG\Bin
+C Compiler:      ArmClang.exe V6.16
+Assembler:       Armasm.exe V6.16
+Linker/Locator:  ArmLink.exe V6.16
+Library Manager: ArmAr.exe V6.16
+Hex Converter:   FromElf.exe V6.16
 CPU DLL:         SARMCM3.DLL V5.35.0.2
 Dialog DLL:      DCM.DLL V1.17.3.0
 Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.9.0
@@ -25,308 +25,18 @@ D:\stm32-ili9341-master\MDK-ARM\main.uvprojx
 Project File Date:  07/30/2024
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'LVGL'
-assembling startup_stm32f411xe.s...
-compiling stm32f4xx_it.c...
-compiling stm32f4xx_hal_msp.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_rcc.c...
+*** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
+Build target 'main'
+../Src/main.c(194): warning: implicitly declaring library function 'sprintf' with type 'int (char *, const char *, ...)' [-Wimplicit-function-declaration]
+                                sprintf(a,"%d",i);
+                                ^
+../Src/main.c(194): note: include the header <stdio.h> or explicitly provide a declaration for 'sprintf'
+1 warning generated.
 compiling main.c...
-../Lib/ili9341/ili9341.h(67): warning:  #1295-D: Deprecated declaration ILI9341_Unselect - give arg types
-  void ILI9341_Unselect();
-../Lib/ili9341/ili9341_touch.h(31): warning:  #1295-D: Deprecated declaration ILI9341_TouchUnselect - give arg types
-  void ILI9341_TouchUnselect();
-../Lib/ili9341/ili9341_touch.h(33): warning:  #1295-D: Deprecated declaration ILI9341_TouchPressed - give arg types
-  bool ILI9341_TouchPressed();
-../Src/main.c(80): warning:  #223-D: function "vsnprintf" declared implicitly
-      vsnprintf(buff, sizeof(buff), fmt, args);
-../Src/main.c: 4 warnings, 0 errors
-compiling stm32f4xx_hal_spi.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal_exti.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal.c...
-compiling fonts.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_uart.c...
-compiling lv_port_disp_template.c...
-compiling lv_port_indev_template.c...
-compiling stm32f4xx_hal_tim.c...
-compiling lv_disp.c...
-compiling lv_event.c...
-..\Middlewares\LVGL\GUI\lvgl\src\core\lv_event.c(120): warning:  #188-D: enumerated type mixed with another type
-      return e->code & ~LV_EVENT_PREPROCESS;
-..\Middlewares\LVGL\GUI\lvgl\src\core\lv_event.c: 1 warning, 0 errors
-compiling lv_group.c...
-compiling lv_indev.c...
-compiling lv_indev_scroll.c...
-compiling lv_obj_class.c...
-compiling lv_obj_draw.c...
-compiling lv_obj.c...
-compiling ili9341_touch.c...
-..\Lib\ili9341\ili9341.h(67): warning:  #1295-D: Deprecated declaration ILI9341_Unselect - give arg types
-  void ILI9341_Unselect();
-..\Lib\ili9341\ili9341_touch.h(31): warning:  #1295-D: Deprecated declaration ILI9341_TouchUnselect - give arg types
-  void ILI9341_TouchUnselect();
-..\Lib\ili9341\ili9341_touch.h(33): warning:  #1295-D: Deprecated declaration ILI9341_TouchPressed - give arg types
-  bool ILI9341_TouchPressed();
-..\Lib\ili9341\ili9341_touch.c(94): warning:  #223-D: function "UART_Printf" declared implicitly
-      UART_Printf("raw_x = %d, raw_y = %d\r\n", x, y);
-..\Lib\ili9341\ili9341_touch.c(95): warning:  #223-D: function "sprintf" declared implicitly
-  		char a[]=sprintf("raw_x = %d, raw_y = %d\r\n", x, y);
-..\Lib\ili9341\ili9341_touch.c(95): warning:  #520-D: initialization with "{...}" expected for aggregate object
-  		char a[]=sprintf("raw_x = %d, raw_y = %d\r\n", x, y);
-..\Lib\ili9341\ili9341_touch.c(95): warning:  #177-D: variable "a"  was declared but never referenced
-  		char a[]=sprintf("raw_x = %d, raw_y = %d\r\n", x, y);
-Internal fault: [0x91d2ec:5060960] in ILI9341_TouchGetCoordinates
-Please contact your supplier.
-compiling ili9341.c...
-..\Lib\ili9341\ili9341.h(67): warning:  #1295-D: Deprecated declaration ILI9341_Unselect - give arg types
-  void ILI9341_Unselect();
-..\Lib\ili9341\ili9341.c: 1 warning, 0 errors
-compiling lv_obj_pos.c...
-compiling lv_obj_scroll.c...
-compiling lv_obj_style.c...
-compiling lv_obj_style_gen.c...
-compiling lv_obj_tree.c...
-compiling lv_draw_sw.c...
-compiling lv_refr.c...
-compiling lv_theme.c...
-compiling lv_draw_sw_arc.c...
-compiling lv_draw_sw_dither.c...
-compiling lv_draw_sw_gradient.c...
-compiling lv_draw_sw_img.c...
-compiling lv_draw_sw_blend.c...
-compiling lv_draw_sw_letter.c...
-compiling lv_draw_sw_polygon.c...
-compiling lv_draw_sw_line.c...
-compiling lv_draw.c...
-compiling lv_draw_arc.c...
-compiling lv_draw_img.c...
-compiling lv_draw_line.c...
-compiling lv_draw_sw_rect.c...
-..\Middlewares\LVGL\GUI\lvgl\src\draw\sw\lv_draw_sw_rect.c(239): warning:  #546-D: transfer of control bypasses initialization of:
-            variable "mask_any_center"  (declared at line 286)
-          goto bg_clean_up;
-          ^
-..\Middlewares\LVGL\GUI\lvgl\src\draw\sw\lv_draw_sw_rect.c: 1 warning, 0 errors
-compiling lv_draw_rect.c...
-compiling lv_draw_label.c...
-compiling lv_draw_triangle.c...
-compiling lv_draw_mask.c...
-compiling lv_img_cache.c...
-compiling lv_img_buf.c...
-compiling lv_img_decoder.c...
-compiling lv_bmp.c...
-compiling lv_grid.c...
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(134): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_COLUMN_DSC_ARRAY = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(135): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_ROW_DSC_ARRAY = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(136): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_COLUMN_ALIGN = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(137): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_ROW_ALIGN = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(139): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_CELL_ROW_SPAN = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(140): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_CELL_ROW_POS = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(141): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_CELL_COLUMN_SPAN = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(142): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_CELL_COLUMN_POS = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(143): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_CELL_X_ALIGN = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(144): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_GRID_CELL_Y_ALIGN = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(589): warning:  #188-D: enumerated type mixed with another type
-      lv_grid_align_t col_align = get_cell_col_align(item);
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c(590): warning:  #188-D: enumerated type mixed with another type
-      lv_grid_align_t row_align = get_cell_row_align(item);
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\grid\lv_grid.c: 12 warnings, 0 errors
-compiling lv_flex.c...
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\flex\lv_flex.c(97): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_FLEX_MAIN_PLACE = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\flex\lv_flex.c(98): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_FLEX_CROSS_PLACE = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\flex\lv_flex.c(99): warning:  #188-D: enumerated type mixed with another type
-      LV_STYLE_FLEX_TRACK_PLACE = lv_style_register_prop() | LV_STYLE_PROP_LAYOUT_REFR;
-..\Middlewares\LVGL\GUI\lvgl\src\extra\layouts\flex\lv_flex.c: 3 warnings, 0 errors
-compiling lv_ffmpeg.c...
-compiling lv_freetype.c...
-compiling lv_fs_fatfs.c...
-compiling lv_fs_posix.c...
-compiling lv_fs_stdio.c...
-compiling lv_fs_win32.c...
-compiling gifdec.c...
-compiling lv_gif.c...
-compiling lv_png.c...
-compiling lv_qrcode.c...
-compiling lodepng.c...
-compiling qrcodegen.c...
-..\Middlewares\LVGL\GUI\lvgl\src\extra\libs\qrcode\qrcodegen.c(278): warning:  #188-D: enumerated type mixed with another type
-  	applyMask(tempBuffer, qrcode, mask);
-..\Middlewares\LVGL\GUI\lvgl\src\extra\libs\qrcode\qrcodegen.c(279): warning:  #188-D: enumerated type mixed with another type
-  	drawFormatBits(ecl, mask, qrcode);
-..\Middlewares\LVGL\GUI\lvgl\src\extra\libs\qrcode\qrcodegen.c: 2 warnings, 0 errors
-compiling tjpgd.c...
-compiling lv_sjpg.c...
-compiling lv_gridnav.c...
-compiling lv_rlottie.c...
-compiling lv_snapshot.c...
-compiling lv_monkey.c...
-compiling lv_theme_basic.c...
-compiling lv_animimg.c...
-compiling lv_calendar_header_arrow.c...
-compiling lv_calendar_header_dropdown.c...
-compiling lv_calendar.c...
-compiling lv_theme_mono.c...
-compiling lv_theme_default.c...
-..\Middlewares\LVGL\GUI\lvgl\src\extra\themes\default\lv_theme_default.c(213): warning:  #188-D: enumerated type mixed with another type
-..\Middlewares\LVGL\GUI\lvgl\src\extra\themes\default\lv_theme_default.c: 1 warning, 0 errors
-compiling lv_list.c...
-compiling lv_keyboard.c...
-compiling lv_imgbtn.c...
-compiling lv_led.c...
-compiling lv_colorwheel.c...
-compiling lv_chart.c...
-compiling lv_menu.c...
-compiling lv_msgbox.c...
-compiling lv_spinner.c...
-compiling lv_spinbox.c...
-compiling lv_meter.c...
-compiling lv_tileview.c...
-compiling lv_tabview.c...
-compiling lv_span.c...
-..\Middlewares\LVGL\GUI\lvgl\src\extra\widgets\span\lv_span.c(881): warning:  #546-D: transfer of control bypasses initialization of:
-            variable "align"  (declared at line 885)
-              goto Next_line_init;
-              ^
-..\Middlewares\LVGL\GUI\lvgl\src\extra\widgets\span\lv_span.c: 1 warning, 0 errors
-compiling lv_font.c...
-compiling lv_win.c...
-compiling lv_extra.c...
-compiling lv_font_fmt_txt.c...
-..\Middlewares\LVGL\GUI\lvgl\src\font\lv_font_fmt_txt.c(137): warning:  #111-D: statement is unreachable
-      return NULL;
-..\Middlewares\LVGL\GUI\lvgl\src\font\lv_font_fmt_txt.c: 1 warning, 0 errors
-compiling lv_font_dejavu_16_persian_hebrew.c...
-compiling lv_font_loader.c...
-compiling lv_font_montserrat_8.c...
-compiling lv_font_montserrat_10.c...
-compiling lv_font_montserrat_12.c...
-compiling lv_font_montserrat_12_subpx.c...
-compiling lv_font_montserrat_14.c...
-compiling lv_font_montserrat_16.c...
-compiling lv_font_montserrat_18.c...
-compiling lv_font_montserrat_20.c...
-compiling lv_font_montserrat_22.c...
-compiling lv_font_montserrat_24.c...
-compiling lv_font_montserrat_26.c...
-compiling lv_font_montserrat_28_compressed.c...
-compiling lv_font_montserrat_28.c...
-compiling lv_font_montserrat_30.c...
-compiling lv_font_montserrat_32.c...
-compiling lv_font_montserrat_34.c...
-compiling lv_font_montserrat_36.c...
-compiling lv_font_montserrat_38.c...
-compiling lv_font_montserrat_40.c...
-compiling lv_font_montserrat_42.c...
-compiling lv_font_montserrat_44.c...
-compiling lv_font_montserrat_46.c...
-compiling lv_font_montserrat_48.c...
-compiling lv_font_simsun_16_cjk.c...
-compiling lv_font_unscii_8.c...
-compiling lv_font_unscii_16.c...
-compiling lv_gpu_stm32_dma2d.c...
-compiling lv_draw_sdl.c...
-compiling lv_draw_sdl_arc.c...
-compiling lv_draw_sdl_bg.c...
-compiling lv_draw_sdl_composite.c...
-compiling lv_draw_sdl_img.c...
-compiling lv_draw_sdl_label.c...
-compiling lv_draw_sdl_line.c...
-compiling lv_draw_sdl_polygon.c...
-compiling lv_draw_sdl_mask.c...
-compiling lv_draw_sdl_rect.c...
-compiling lv_draw_sdl_stack_blur.c...
-compiling lv_draw_sdl_texture_cache.c...
-compiling lv_draw_sdl_utils.c...
-compiling lv_hal_tick.c...
-compiling lv_hal_indev.c...
-compiling lv_anim.c...
-compiling lv_hal_disp.c...
-..\Middlewares\LVGL\GUI\lvgl\src\hal\lv_hal_disp.c(573): warning:  #188-D: enumerated type mixed with another type
-      return disp->driver->rotated;
-..\Middlewares\LVGL\GUI\lvgl\src\hal\lv_hal_disp.c: 1 warning, 0 errors
-compiling lv_anim_timeline.c...
-compiling lv_async.c...
-compiling lv_bidi.c...
-compiling lv_area.c...
-compiling lv_color.c...
-compiling lv_gc.c...
-compiling lv_fs.c...
-compiling lv_ll.c...
-compiling lv_log.c...
-compiling lv_math.c...
-compiling lv_lru.c...
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_lru.c(313): warning:  #68-D: integer conversion resulted in a change of sign
-      uint32_t i = 0, min_index = -1;
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_lru.c(314): warning:  #68-D: integer conversion resulted in a change of sign
-      uint64_t min_access_count = -1;
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_lru.c: 2 warnings, 0 errors
-compiling lv_mem.c...
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_mem.c(311): warning:  #111-D: statement is unreachable
-      return NULL;
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_mem.c: 1 warning, 0 errors
-compiling lv_style.c...
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_style.c(74): warning:  #188-D: enumerated type mixed with another type
-      return act_id;
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_style.c: 1 warning, 0 errors
-compiling lv_printf.c...
-compiling lv_templ.c...
-compiling lv_style_gen.c...
-compiling lv_timer.c...
-compiling lv_tlsf.c...
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_tlsf.c(898): warning:  #68-D: integer conversion resulted in a change of sign
-          offset_to_block(pool, -(int)block_header_overhead);
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_tlsf.c(1000): warning:  #68-D: integer conversion resulted in a change of sign
-      block = offset_to_block(mem, -(tlsfptr_t)block_header_overhead);
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_tlsf.c(1018): warning:  #68-D: integer conversion resulted in a change of sign
-      block_header_t * block = offset_to_block(pool, -(int)block_header_overhead);
-..\Middlewares\LVGL\GUI\lvgl\src\misc\lv_tlsf.c: 3 warnings, 0 errors
-compiling lv_txt_ap.c...
-compiling lv_utils.c...
-compiling lv_txt.c...
-compiling lv_btn.c...
-compiling lv_arc.c...
-compiling lv_bar.c...
-compiling lv_checkbox.c...
-compiling lv_line.c...
-compiling lv_canvas.c...
-compiling lv_dropdown.c...
-compiling lv_btnmatrix.c...
-compiling lv_img.c...
-compiling lv_objx_templ.c...
-compiling lv_label.c...
-compiling lv_roller.c...
-compiling lv_switch.c...
-compiling lv_slider.c...
-compiling lv_table.c...
-compiling lv_textarea.c...
 linking...
-Program Size: Code=15378 RO-data=1022 RW-data=20 ZI-data=1956  
+Program Size: Code=9322 RO-data=5406 RW-data=20 ZI-data=1972  
 FromELF: creating hex file...
-"main\main.axf" - 0 Error(s), 42 Warning(s).
+"main\main.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -342,7 +52,7 @@ Package Vendor: Keil
                 STMicroelectronics STM32F4 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
-  .\RTE\_LVGL
+  .\RTE\_main
   C:\Users\admin\AppData\Local\Arm\Packs\ARM\CMSIS\5.8.0\CMSIS\Core\Include
   C:\Users\admin\AppData\Local\Arm\Packs\Keil\STM32F4xx_DFP\2.17.1\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
@@ -350,7 +60,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:14
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
