--- a/MDK-ARM/main/main.build_log.htm
+++ b/MDK-ARM/main/main.build_log.htm
@@ -27,11 +27,19 @@ Project File Date:  07/30/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'main'
-compiling main.c...
+../Middlewares/LVGL/GUI/lvgl/examples/porting/lv_port_disp_template.c(133): warning: implicit declaration of function 'init' is invalid in C99 [-Wimplicit-function-declaration]
+                init();
+                ^
+../Middlewares/LVGL/GUI/lvgl/examples/porting/lv_port_disp_template.c(149): warning: implicit declaration of function 'ILI9341_FillRectangle_3' is invalid in C99 [-Wimplicit-function-declaration]
+                ILI9341_FillRectangle_3(area->x1,area->y1,area->x2-area->x1+1,area->y2-area->y1+1,color_p);
+                ^
+2 warnings generated.
+compiling lv_port_disp_template.c...
+compiling ili9341.c...
 linking...
-Program Size: Code=196784 RO-data=18196 RW-data=148 ZI-data=57148  
+Program Size: Code=196848 RO-data=18196 RW-data=148 ZI-data=57148  
 FromELF: creating hex file...
-"main\main.axf" - 0 Error(s), 0 Warning(s).
+"main\main.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -55,7 +63,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.5.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
