--- a/MDK-ARM/main/main.build_log.htm
+++ b/MDK-ARM/main/main.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
 D:\stm32-ili9341-master\MDK-ARM\main.uvprojx
-Project File Date:  07/31/2024
+Project File Date:  08/01/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'main'
-assembling startup_stm32f411xe.s...
+compiling ili9341.c...
 linking...
-Program Size: Code=205204 RO-data=18728 RW-data=164 ZI-data=72004  
+Program Size: Code=209544 RO-data=104640 RW-data=2076 ZI-data=119988  
 FromELF: creating hex file...
 "main\main.axf" - 0 Error(s), 0 Warning(s).
 
